# secret-online-patcher

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/indexer/: dir_hasher.rs  file_change.rs  file_hasher.rs  file_info.rs  indexed_hasher.rs  indexer_config.rs  mod.rs
src/service/: app_manager.rs
src/storage/: application.rs  application_data.rs  db_utils.rs  file_index.rs  mod.rs  patch_db.rs  patch_info.rs  patch_zip.rs  patcher_db.rs
tests/: mod.rs
tests/common/: db_util.rs  mod.rs  test_util.rs
tests/indexer/: dir_hasher_test.rs  file_hasher_test.rs  mod.rs
